z-index fixed on labels

--- a/css/_general.scss
+++ b/css/_general.scss
@@ -79,35 +79,41 @@ img {
 
 .canvas-section {
     position: relative;
-    .labels {
+    canvas {
+        z-index: 0;
+    }
+    .col {
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        // z-index: -3;
-        .col {
-            @include column(center);
-            &.hide {
-                height: 0%;
-            }
-            // z-index: -2;
+        z-index: 0;
+        @include column(center);
+        &.hide {
+            height: 0%;
         }
-        label:not(.d-none) {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            border: 3px dashed $light;
-            color: $light;
-            border-radius: 5px;
-            padding: 40px;
-            cursor: pointer;
-            &:hover {
-              border-color: $info;  
-              color: $info;  
-            }
-            z-index: 999;
+        &:last-of-type {
+            left: unset;
+            right: 0;
+        }
+        &.behind {
+            z-index: -1;
+        }
+    }
+    label:not(.d-none) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        border: 3px dashed $light;
+        color: $light;
+        border-radius: 5px;
+        padding: 40px;
+        cursor: pointer;
+        &:hover {
+            border-color: $info;  
+            color: $info;  
         }
     }
 }
